--- a/pytest.ini
+++ b/pytest.ini
@@ -143,6 +143,9 @@ flake8-ignore =
     medusa/show_name_helpers.py D100 D202 D205 D400 D401 N802 N806
     medusa/show_queue.py D100 D101 D102 D205 D400 D401 N802 N803 N806
     medusa/show_updater.py D100 D101 D102 D105
+    medusa/subtitle_providers/__init__.py D104
+    medusa/subtitle_providers/legendastv.py I100 D100 D102 D105 D204
+    medusa/subtitle_providers/itasa.py D102 I100 D100 D101 D105 D400 E123 E126
     medusa/system/__init__.py D104
     medusa/system/restart.py D100 D101 D102
     medusa/system/shutdown.py D100 D101 D102
